# HermesCloak

./: NOTICE  README.md  pyproject.toml
demo/: README.md  __init__.py  examples.py  index.html  test_server.py
docs/: AGENT-PROMPT.md  INTEGRATION.md  ROADMAP.md  UPGRADING.md
hermescloak/: __init__.py  detection.py  durable_vault.py  egress.py  engine.py  entities.py  instruction.py  profile.py  pseudonymizer.py  restorer.py  span.py  tokens.py  vault.py
hermescloak/adapter/: alerts.py  guard.py  hermes_hooks.py  hermes_live.py  ner_client.py  session_registry.py  sql_source.py
hermescloak/integrations/: requests_egress.py
hermescloak/recognizers/: deterministic.py  gazetteer.py  ner.py
hermescloak/service/: ner_service.py
install/: apply_hooks.py  egress_autoload.py
profiles/: example.yaml
tests/: test_detection.py  test_deterministic.py  test_durable_vault.py  test_egress.py  test_engine.py  test_entities.py  test_gazetteer.py  test_ner.py  test_profile.py  test_pseudonymizer.py  test_requests_egress.py  test_restorer.py  test_tokens.py  test_vault.py
tests/adapter/: test_alerts.py  test_guard_failopen.py  test_hermes_hooks.py  test_hermes_live.py  test_ner_client.py  test_per_agent_vault.py  test_session_registry.py  test_sql_source.py
tests/golden/: corpus.py  test_golden_leaks.py
tests/service/: test_ner_service.py
